--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 				font-size: 10px;
 			}
 			table {
-				border: 3px solid #D5EDEB;
+				border: 3px solid #000;
 				margin-top: 10px;
 				margin-left: auto;
 				margin-right: auto;
-				background-color: #D5EDEB;
+				background-color: #fff;
 			}
 			td {
-				border: 1px solid #D5EDEB;
+				border: 1px solid #000;
 				width: 50px;
 				height: 50px;				
 			}	
 			input {
-				background-color: #1DE9B6;
+				background-color: #fff;
 				height: 50px;
 				width: 50px;
 				border: 0px;				
@@ -75,7 +75,7 @@
 			}
 			.fixed {
 				font-weight: bold;
-				color: #00838F;
+				color: #000;
 			}
 			.result {
 				color: gray;
